[project]
name = "the-tower"
version = "0.1.0"
description = "The game about climbing the tower"
authors = [
    {name = "nikohonu", email = "nikohonu@proton.me"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "basedpyright>=1.15.1",
]
