[project]
name = "the-tower"
version = "0.1.0"
description = "The game about climbing the tower"
authors = [
    {name = "nikohonu", email = "nikohonu@proton.me"},
]
dependencies = [
    "inu-musume-engine @ file:///${PROJECT_ROOT}/inu-musume-engine",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "basedpyright>=1.15.1",
]

[project.scripts]
tower  = 'the_tower.__main__:main'

[tool.basedpyright]
typeCheckingMode = "all"
